Cambios en el tamaño del logo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <!-- Basic -->
@@ -10,10 +10,10 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>Dominic - Responsive HTML5 OnePage Template</title>  
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>Materialización 360</title>  
+    <meta name="keywords" content="Prototipado 3D, Fabricación de productos, Diseños en impresoras 3D">
+    <meta name="description" content="Es una empresa especializada en tecnología 3D proporcionando un servicio de desarrollo de diseño y Fabricación de productos y prototipado 3D.">
+    <meta name="author" content="Camila Vergara">
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
@@ -49,7 +49,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-			<img class="img-fluid" src="images/logo.png" alt="" />
+			<img class="img-fluid-logo" src="images/logo.png" alt="" />
 		</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
@@ -82,7 +82,7 @@
     -->
 	<section id="inicio" class="main-banner parallaxie" style="background: url('uploads/banner-01.jpg')">
 		<div class="heading">
-			<h1>MATERIALIZACIÓN 360</h1>
+			<h1>MATERIALIZACIÓN 360º</h1>
 			<p>"Servicios y soluciones de ingeniería, <br>especializados en tecnologías 3D."</p>
 			<h3 class="cd-headline clip is-full-width">
 				<span>Servicios de </span>
